--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ package-lock.json
 /docker/data/database/db/*
 /docker/data/certbot/conf/*
 /docker/data/ospos/app/*
+.DS_Store
+application/.DS_Store
